samples/_failures_safe/1761602136_d0c77d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9659618c.c: In function ‘main’:
./samples/SAFE/__tmp_9659618c.c:135:16: error: missing terminating " character
  135 |         printf("Status
      |                ^~~~~~~
./samples/SAFE/__tmp_9659618c.c:135:9: error: expected expression at end of input
  135 |         printf("Status
      |         ^~~~~~
./samples/SAFE/__tmp_9659618c.c:135:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9659618c.c:135:9: error: expected declaration or statement at end of input
